# QtSvgIconEngine

./: CMakeLists.txt  LICENSE  README.md  SvgIconEngine.cpp  SvgIconEngine.h  main.cpp
.github/workflows/: ci.yml
cmake/: SvgIconEngineConfig.cmake.in
include/: SvgIcon.h  SvgIconButton.h  SvgIconEngine.h  SvgIconPainter.h  SvgQIconEngine.h  SvgStroke.h
src/: SvgIcon.cpp  SvgIconButton.cpp  SvgIconEngine.cpp  SvgIconPainter.cpp  SvgQIconEngine.cpp  SvgStroke.cpp
svgs/solid/: dashboard-fill-stroke.css
test/: CMakeLists.txt  main.cpp
test/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
tests/: CMakeLists.txt  tst_button_background.cpp  tst_button_layout.cpp  tst_hidpi.cpp  tst_icon.cpp  tst_interaction.cpp  tst_paths.cpp  tst_qicon.cpp  tst_readme.cpp  tst_stroke.cpp  tst_theme.cpp
tools/: CMakeLists.txt  make_docs.cpp  make_docs.sh
